# agentic-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  credits.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
apps/awhere-examples/: pyproject.toml
apps/awhere_examples/: pyproject.toml
apps/awhere_examples/src/awhere_examples/: __init__.py
docs/extra/: tweaks.css
docs/includes/: glossary.md
libs/awhere/: README.md  pyproject.toml
libs/awhere/src/awhere/: __init__.py  pygentic.py
libs/awhere/tests/: conftest.py  test_pygentic.py
tests/: test_imports.py  test_live.py
