[project]
name = "awhere-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Al Wonder", email = "al@yiwonder.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
awhere-examples = "awhere_examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
