[project]
name = "awhere-examples"
version = "0.1.0"
description = "Examples demonstrating use of ⧊ware framework."
authors = [
    { name = "Al Wonder", email = "al@yiwonder.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
awhere-examples = "awhere_examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
