[project]
name = "awhere"
version = "0.1.0"
description = "Agentic AI workflow system"
authors = [
    { name = "Al Wonder", email = "al@yiwonder.com" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Framework :: Pydantic :: 2',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Typing :: Typed',
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.11",
    "pydantic>=2.10",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://awhere.ai/"
Documentation = "https://docs.awhere.ai/"
Repository = "https://github.com/alywonder/agentic-ai"

[dependency-groups]
# Adding it here to ensure that it runs when we test this module standalone
# dev = [
#     "devtools>=0.12.2",
#     "coverage[toml]>=7.6.2",
#     "inline-snapshot>=0.14",
#     "pytest>=8.3.3",
#     "pytest-examples>=0.0.14",
#     "pytest-mock>=3.14.0",
#     "pytest-pretty>=1.2.0",
# ]
extend = ["../pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
